# knowledge_competition

./: .gitignore  LICENSE  README.md  answ.toml  lider_tablosu.toml  pyproject.toml  requirments.in  start.py
src/bilgi_yarismasi/: __init__.py  sun-valley.tcl
